docs/api/qiskit/1.3/qiskit.circuit.library.CSdgGate.mdx
---
title: CSdgGate (v1.3)
description: API reference for qiskit.circuit.library.CSdgGate in qiskit v1.3
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.CSdgGate
---

# CSdgGate

<Class id="qiskit.circuit.library.CSdgGate" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/circuit/library/standard_gates/s.py#L344-L428" signature="qiskit.circuit.library.CSdgGate(*args, _force_mutable=False, **kwargs)" modifiers="class">
  Bases: [`SingletonControlledGate`](circuit_singleton#qiskit.circuit.singleton.SingletonControlledGate "qiskit.circuit.singleton.SingletonControlledGate")

  Controlled-S^dagger gate.

  Can be applied to a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") with the [`csdg()`](qiskit.circuit.QuantumCircuit#csdg "qiskit.circuit.QuantumCircuit.csdg") method.

  **Circuit symbol:**

  ```text
  q_0: ───■───
       ┌──┴──┐
  q_1: ┤ Sdg ├
       └─────┘
  ```

  **Matrix representation:**

$$
CS^\dagger \ q_0, q_1 =
I \otimes |0 \rangle\langle 0| + S^\dagger \otimes |1 \rangle\langle 1|  =
\begin{pmatrix}
1 & 0 & 0 & 0 \\
0 & 1 & 0 & 0 \\
0 & 0 & 1 & 0 \\
0 & 0 & 0 & -i
\end{pmatrix}
$$

  Create new CSdg gate.

  ## Attributes

  ### base\_class

  <Attribute id="qiskit.circuit.library.CSdgGate.base_class">
    Get the base class of this instruction. This is guaranteed to be in the inheritance tree of `self`.

    The “base class” of an instruction is the lowest class in its inheritance tree that the object should be considered entirely compatible with for \_all\_ circuit applications. This typically means that the subclass is defined purely to offer some sort of programmer convenience over the base class, and the base class is the “true” class for a behavioral perspective. In particular, you should *not* override [`base_class`](#qiskit.circuit.library.CSdgGate.base_class "qiskit.circuit.library.CSdgGate.base_class") if you are defining a custom version of an instruction that will be implemented differently by hardware, such as an alternative measurement strategy, or a version of a parametrized gate with a particular set of parameters for the purposes of distinguishing it in a [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") from the full parametrized gate.

    This is often exactly equivalent to `type(obj)`, except in the case of singleton instances of standard-library instructions. These singleton instances are special subclasses of their base class, and this property will return that base. For example:

    ```python
    >>> isinstance(XGate(), XGate)
    True
    >>> type(XGate()) is XGate
    False
    >>> XGate().base_class is XGate
    True
    ```

    In general, you should not rely on the precise class of an instruction; within a given circuit, it is expected that `Instruction.name` should be a more suitable discriminator in most situations.
  </Attribute>

  ### condition

  <Attribute id="qiskit.circuit.library.CSdgGate.condition">
    The classical condition on the instruction.

    <Admonition title="Deprecated since version 1.3.0" type="danger">
      The property `qiskit.circuit.instruction.Instruction.condition` is deprecated as of qiskit 1.3.0. It will be removed in 2.0.0.
    </Admonition>
  </Attribute>

  ### condition\_bits

  <Attribute id="qiskit.circuit.library.CSdgGate.condition_bits">
    Get Clbits in condition.

    <Admonition title="Deprecated since version 1.3.0" type="danger">
      The property `qiskit.circuit.instruction.Instruction.condition_bits` is deprecated as of qiskit 1.3.0. It will be removed in 2.0.0.
    </Admonition>
  </Attribute>

  ### ctrl\_state

  <Attribute id="qiskit.circuit.library.CSdgGate.ctrl_state">
    Return the control state of the gate as a decimal integer.
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.CSdgGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.CSdgGate.definition">
    Return definition in terms of other basic gates. If the gate has open controls, as determined from [`ctrl_state`](#qiskit.circuit.library.CSdgGate.ctrl_state "qiskit.circuit.library.CSdgGate.ctrl_state"), the returned definition is conjugated with X without changing the internal `_definition`.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.CSdgGate.duration">
    Get the duration.

    <Admonition title="Deprecated since version 1.3.0" type="danger">
      The property `qiskit.circuit.instruction.Instruction.duration` is deprecated as of qiskit 1.3.0. It will be removed in Qiskit 2.0.0.
    </Admonition>
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.CSdgGate.label">
    Return instruction label
  </Attribute>

  ### mutable

  <Attribute id="qiskit.circuit.library.CSdgGate.mutable">
    Is this instance is a mutable unique instance or not.

    If this attribute is `False` the gate instance is a shared singleton and is not mutable.
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.CSdgGate.name">
    Get name of gate. If the gate has open controls the gate name will become:

    > \<original\_name\_o\<ctrl\_state>

    where \<original\_name> is the gate name for the default case of closed control qubits and \<ctrl\_state> is the integer value of the control state for the gate.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.CSdgGate.num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_ctrl\_qubits

  <Attribute id="qiskit.circuit.library.CSdgGate.num_ctrl_qubits">
    Get number of control qubits.

    **Returns**

    The number of control qubits for the gate.

    **Return type**

    [int](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.CSdgGate.num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.CSdgGate.params">
    Get parameters from base\_gate.

    **Returns**

    List of gate parameters.

    **Return type**

    [list](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")

    **Raises**

    [**CircuitError**](circuit#qiskit.circuit.CircuitError "qiskit.circuit.CircuitError") – Controlled gate does not define a base gate
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.CSdgGate.unit">
    Get the time unit of duration.

    <Admonition title="Deprecated since version 1.3.0" type="danger">
      The property `qiskit.circuit.instruction.Instruction.unit` is deprecated as of qiskit 1.3.0. It will be removed in Qiskit 2.0.0.
    </Admonition>
  </Attribute>

  ## Methods

  ### inverse

  <Function id="qiskit.circuit.library.CSdgGate.inverse" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/circuit/library/standard_gates/s.py#L408-L420" signature="inverse(annotated=False)">
    Return inverse of CSdgGate (CSGate).

    **Parameters**

    **annotated** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")) – when set to `True`, this is typically used to return an [`AnnotatedOperation`](qiskit.circuit.AnnotatedOperation "qiskit.circuit.AnnotatedOperation") with an inverse modifier set instead of a concrete [`Gate`](qiskit.circuit.Gate "qiskit.circuit.Gate"). However, for this class this argument is ignored as the inverse of this gate is always a [`CSGate`](qiskit.circuit.library.CSGate "qiskit.circuit.library.CSGate").

    **Returns**

    inverse of [`CSdgGate`](#qiskit.circuit.library.CSdgGate "qiskit.circuit.library.CSdgGate")

    **Return type**

    [CSGate](qiskit.circuit.library.CSGate "qiskit.circuit.library.CSGate")
  </Function>

  ### power

  <Function id="qiskit.circuit.library.CSdgGate.power" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/circuit/library/standard_gates/s.py#L422-L425" signature="power(exponent, annotated=False)">
    Raise this gate to the power of `exponent`.

    Implemented either as a unitary gate (ref. [`UnitaryGate`](qiskit.circuit.library.UnitaryGate "qiskit.circuit.library.UnitaryGate")) or as an annotated operation (ref. [`AnnotatedOperation`](qiskit.circuit.AnnotatedOperation "qiskit.circuit.AnnotatedOperation")). In the case of several standard gates, such as [`RXGate`](qiskit.circuit.library.RXGate "qiskit.circuit.library.RXGate"), when the power of a gate can be expressed in terms of another standard gate that is returned directly.

    **Parameters**

    *   **exponent** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")) – the power to raise the gate to
    *   **annotated** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")) – indicates whether the power gate can be implemented as an annotated operation. In the case of several standard gates, such as [`RXGate`](qiskit.circuit.library.RXGate "qiskit.circuit.library.RXGate"), this argument is ignored when the power of a gate can be expressed in terms of another standard gate.

    **Returns**

    An operation implementing `gate^exponent`

    **Raises**

    [**CircuitError**](circuit#qiskit.circuit.CircuitError "qiskit.circuit.CircuitError") – If gate is not unitary
  </Function>
</Class>

